simplify fee structure
